--- a/app/views/lyrics/index.html.erb
+++ b/app/views/lyrics/index.html.erb
@@ -1,5 +1,8 @@
 <h1>メッセージ一覧</h1>
 
+<% if logged_in? %>
+  <p>ログイン完了ユーザ: <%= current_user.name %></p>
+
 <% if @lyrics.any? %>
   <table class="table table-striped">
     <thead>
@@ -21,3 +24,11 @@
 <% end %>
 
 <%= link_to '新規リリックの投稿', new_lyric_path, class: "btn btn-primary" %>
+<% else %>
+  <div class="center jumbotron">
+    <div class="text-center">
+      <h1>Welcome to the Musith!</h1>
+      <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+    </div>
+  </div>
+<% end %>
