--- a/app/views/lyrics/_toppage.html.erb
+++ b/app/views/lyrics/_toppage.html.erb
@@ -1,9 +1,8 @@
 <% if lyrics.any? %>
-  <h1>過去の投稿</h1>
-  <table class="table table-striped">
+  <table class="table table-striped text-center">
     <thead>
       <tr>
-        <th>タイトル</th>
+        <th class="h3">Title</th>
       </tr>
     </thead>
     <tbody>
