--- a/app/views/lyrics/_form.html.erb
+++ b/app/views/lyrics/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-6">
+  <div class="col-12">
     <%= form_with(model: lyric, local: true) do |f| %>
       <% if lyric.errors.any? %>
         <div id="error_explanation" class="alert alert-warning">
@@ -12,21 +12,23 @@
       <% end %>
 
       <div class="form-group">
-        <%= f.label :title, 'タイトル' %>
+        <%= f.label :title, 'Title' %>
         <%= f.text_field :title, class: 'form-control' %>
       </div>
 
       <div class="form-group">
-        <%= f.label :content, 'メッセージ' %>
-        <%= f.text_field :content, class: 'form-control' %>
+        <%= f.label :content, 'Lyric' %>
+        <%= f.text_area :content, class: 'form-control' %>
       </div>
       
       <div class="form-group">
-        <%= f.label :meaning, '込めた意味' %>
-        <%= f.text_field :meaning, class: 'form-control' %>
+        <%= f.label :meaning, '込めた意味、こだわり' %>
+        <%= f.text_area :meaning, class: 'form-control' %>
       </div>
-
-      <%= f.submit '投稿', class: 'btn btn-primary' %>
+      
+      <div class="text-center">
+        <%= f.submit '投稿', class: 'btn btn-outline-info btn-lg text-center' %>
+      </div>
     <% end %>
   </div>
 </div>
