--- a/app/views/lyrics/index.html.erb
+++ b/app/views/lyrics/index.html.erb
@@ -1,12 +1,10 @@
-<h1>リリック一覧</h1>
-
-<% if logged_in? %>
+<h1 class="text-center mb-5">Lyrics</h1>
 
   <% if @lyrics.any? %>
-    <table class="table table-striped">
+    <table class="table table-striped text-center">
       <thead>
         <tr>
-          <th>タイトル</th>
+          <th class="h3">Title</th>
         </tr>
       </thead>
       <tbody>
@@ -21,26 +19,3 @@
       <%= paginate @lyrics %>
     </div>
   <% end %>
-
-<%= link_to '新規リリックの投稿', new_lyric_path, class: "btn btn-primary" %>
-<% else %>
-  <% if @lyrics.any? %>
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>タイトル</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @lyrics.each do |lyric| %>
-          <tr>
-            <td><%= link_to lyric.title, lyric %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-    <div>
-      <%= paginate @lyrics %>
-    </div>
-  <% end %>
-<% end %>
