--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -43,7 +43,7 @@
     <h1 class="lyst mb-3">LYST</h1>
     <div class="card-group">
       <div class="card mr-3">
-        <img class="img-fluid" src="/assets/lyrics.jpg">
+        <img class="img-fluid" src="/assets/lyrics1.jpg">
         <%= link_to "CHECK!", lyrics_path, class: "btn btn-outline-info ml-5 mr-5 mb-3" %>
       </div>
       <div class="card mr-3">
