--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 
   <body>
     <%= render 'layouts/navbar_toppage' %>
-    <div class="container">
+    <div class="container mb-4">
       <%= render 'layouts/flash_messages' %>
 
       <%= yield %>
