--- a/app/views/layouts/_navbar_toppage.html.erb
+++ b/app/views/layouts/_navbar_toppage.html.erb
@@ -14,9 +14,9 @@
             <ul class="dropdown-menu dropdown-menu-right">
               <li class="dropdown-item"><%= link_to 'Lyric', new_lyric_path %></li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item "><%= link_to 'Code', root_path %></li>
+              <li class="dropdown-item "><%= link_to 'Code', develops_path %></li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item "><%= link_to 'Melody', root_path %></li>
+              <li class="dropdown-item "><%= link_to 'Melody', develops_path %></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -24,9 +24,9 @@
             <ul class="dropdown-menu">
               <li class="dropdown-item "><%= link_to 'Lyric', lyrics_path %></li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item "><%= link_to 'Code', root_path %></li>
+              <li class="dropdown-item "><%= link_to 'Code', develops_path %></li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item "><%= link_to 'Melody', root_path %></li>
+              <li class="dropdown-item "><%= link_to 'Melody', develops_path %></li>
             </ul>
           </li>
           <li class="nav-item"><%= link_to 'Your Profile', user_path(current_user), class: 'nav-link' %></li>
@@ -37,9 +37,9 @@
             <ul class="dropdown-menu dropdown-menu-right">
               <li class="dropdown-item "><%= link_to 'Lyric', lyrics_path %></li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item "><%= link_to 'Code', root_path %></li>
+              <li class="dropdown-item "><%= link_to 'Code', develops_path %></li>
               <li class="dropdown-divider"></li>
-              <li class="dropdown-item "><%= link_to 'Melody', root_path %></li>
+              <li class="dropdown-item "><%= link_to 'Melody', develops_path %></li>
             </ul>
           </li>
           <li class="nav-item"><%= link_to 'Signup', signup_path, class: 'nav-link' %></li>
