--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -12,13 +12,13 @@
       </div>
       <div class="card mr-3">
         <img class="img-fluid" src="/assets/codes.jpg">
-        <%= link_to "CHECK!", root_path, class: "btn btn-outline-info ml-5 mr-5 mb-3" %>
-        <%= link_to "MAKE!", root_path, class: "btn btn-outline-info ml-5 mr-5 mb-3" %>
+        <%= link_to "CHECK!", develops_path, class: "btn btn-outline-info ml-5 mr-5 mb-3" %>
+        <%= link_to "MAKE!", develops_path, class: "btn btn-outline-info ml-5 mr-5 mb-3" %>
       </div>
       <div class="card">
         <img class="img-fluid" src="/assets/melodies.jpg">
-        <%= link_to "CHECK!", root_path, class: "btn btn-outline-info ml-5 mr-5 mb-3" %>
-        <%= link_to "MAKE!", root_path, class: "btn btn-outline-info ml-5 mr-5 mb-3" %>
+        <%= link_to "CHECK!", develops_path, class: "btn btn-outline-info ml-5 mr-5 mb-3" %>
+        <%= link_to "MAKE!", develops_path, class: "btn btn-outline-info ml-5 mr-5 mb-3" %>
       </div>
     </div>
     <div class="row">
