画像のnavのところを修正

--- a/app/views/layouts/_navbar_toppage.html.erb
+++ b/app/views/layouts/_navbar_toppage.html.erb
@@ -1,6 +1,6 @@
 <header class="mb-1 mt-4">
   <nav class="navbar navbar-expand-sm navbar-light">
-    <a class="navbar-brand ml-4" href="/"><img src="/assets/musith1.png"></a>
+    <a class="navbar-brand ml-4" href="/"><%= image_tag asset_path("musith.png") %></a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
