--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -37,7 +37,7 @@
   <footer class="text-center"><small>&copy; Eisuke Sato</small></footer>
 <% else %>
   <div class="mainheader mb-5">
-    <img src="/assets/idea5.jpg" class="anime_test">
+    <%= image_tag asset_path("idea.jpg"), class: "thought" %>
   </div>
   <div class="container">
     <h1 class="lyst mb-3">LYST</h1>
