--- a/app/views/lyrics/index.html.erb
+++ b/app/views/lyrics/index.html.erb
@@ -10,7 +10,7 @@
       <tbody>
         <% @lyrics.each do |lyric| %>
           <tr>
-            <td><%= link_to lyric.title, lyric %></td>
+            <td class="long-sentence"><%= link_to lyric.title, lyric%></td>
           </tr>
         <% end %>
       </tbody>
