--- a/app/views/lyrics/_toppage.html.erb
+++ b/app/views/lyrics/_toppage.html.erb
@@ -1,5 +1,5 @@
 <% if lyrics.any? %>
-  <table class="table table-striped text-center">
+  <table class="table table-striped text-center long-sentence">
     <thead>
       <tr>
         <th class="h3">Title</th>
