--- a/app/views/lyrics/show.html.erb
+++ b/app/views/lyrics/show.html.erb
@@ -25,27 +25,50 @@
     </div>
   <% end %>
 </div>
+
+
  <h3 class="text-center">Comments</h3>
   <% if @comments.any? %>
-    <table class="table table-striped text-center">
-      <tbody>
-        <% @comments.each do |comment| %>
-          <tr>
-            <td>id:&nbsp;&nbsp;&nbsp;<%= comment.id %></td>
-            <td class="long-sentence"><%= raw(nl2br(comment.post))%></td>
-            <td>
-              <% if current_user == comment.user %>
-                <%=link_to "削除", lyric_comment_path(comment.lyric.id, comment.id), method: :delete %>
-              <% end %>
-            </td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-    <div>
-      <%= paginate @comments %>
+    <% @comments.each do |comment| %>
+    <div class="mb-2">
+        <div class="row">
+          <div class="comment-id">id:<%= comment.id %></div>
+          <div class="comment-content"><%= comment.post %></div>
+          <div class="comment-delete">
+            <% if current_user == comment.user %>
+              <%=link_to "削除", lyric_comment_path(comment.lyric.id, comment.id), method: :delete %>
+            <% end %>
+          </div>
+        </div>
+        <div class="dropdown-divider"></div>
     </div>
+    <% end %>
   <% end %>
+
+
+
+
+ <!--<h3 class="text-center">Comments</h3>-->
+ <!-- <% if @comments.any? %>-->
+ <!--   <table class="table table-striped text-center">-->
+ <!--     <tbody>-->
+ <!--       <% @comments.each do |comment| %>-->
+ <!--         <tr>-->
+ <!--           <td>id:&nbsp;&nbsp;&nbsp;<%= comment.id %></td>-->
+ <!--           <td class="long-sentence"><%= raw(nl2br(comment.post))%></td>-->
+ <!--           <td>-->
+ <!--             <% if current_user == comment.user %>-->
+ <!--               <%=link_to "削除", lyric_comment_path(comment.lyric.id, comment.id), method: :delete %>-->
+ <!--             <% end %>-->
+ <!--           </td>-->
+ <!--         </tr>-->
+ <!--       <% end %>-->
+ <!--     </tbody>-->
+ <!--   </table>-->
+ <!--   <div>-->
+ <!--     <%= paginate @comments %>-->
+ <!--   </div>-->
+ <!-- <% end %>-->
 
 <% if current_user == @lyric.user %>
  <div class="text-right">
