音声挿入作業前

--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -48,11 +48,11 @@
       </div>
       <div class="card mr-3">
         <%= image_tag asset_path("codes.jpg"), class: "img-fluid" %>
-        <%= link_to "CHECK!", root_path, class: "btn btn-outline-info ml-5 mr-5 mb-3" %>
+        <%= link_to "CHECK!", develops_path, class: "btn btn-outline-info ml-5 mr-5 mb-3" %>
       </div>
       <div class="card">
         <%= image_tag asset_path("melodies.jpg"), class: "img-fluid" %>
-        <%= link_to "CHECK!", root_path, class: "btn btn-outline-info ml-5 mr-5 mb-3" %>
+        <%= link_to "CHECK!", develops_path, class: "btn btn-outline-info ml-5 mr-5 mb-3" %>
       </div>
     </div>
   </div>
